# ZBarUtils

./: README.md
ZBarScanUtils/: build.gradle  settings.gradle
ZBarScanUtils/ZBarQRScanner/: build.gradle
ZBarScanUtils/ZBarQRScanner/src/androidTest/java/com/yancy/zbarqrscanner/: ExampleInstrumentedTest.kt
ZBarScanUtils/ZBarQRScanner/src/main/: AndroidManifest.xml
ZBarScanUtils/ZBarQRScanner/src/main/java/com/yancy/zbarqrscanner/: QRDecoder.kt
ZBarScanUtils/ZBarQRScanner/src/main/jni/: CMakeLists.txt  ZBarDecoder.cpp  ZBarDecoder.h  zbarjni.c
ZBarScanUtils/ZBarQRScanner/src/main/jni/include/zbar/: Exception.h
ZBarScanUtils/ZBarQRScanner/src/main/res/values/: strings.xml
ZBarScanUtils/ZBarQRScanner/src/test/java/com/yancy/zbarqrscanner/: ExampleUnitTest.kt
ZBarScanUtils/app/: build.gradle
ZBarScanUtils/app/src/androidTest/java/com/yancy/zbarscanutils/: ExampleInstrumentedTest.kt
ZBarScanUtils/app/src/main/: AndroidManifest.xml
ZBarScanUtils/app/src/main/res/layout/: activity_main.xml
ZBarScanUtils/app/src/main/res/values/: strings.xml
ZBarScanUtils/gradle/wrapper/: gradle-wrapper.properties
libiconv-1.16/__MACOSX/: ._libiconv-1.16
libiconv-1.16/__MACOSX/libiconv-1.16/libcharset/: ._COPYING.LIB  ._config.h
libiconv-1.16/__MACOSX/libiconv-1.16/libcharset/lib/: ._localcharset.c
libiconv-1.16/libiconv-1.16/: config.h  config.status  libtool
libiconv-1.16/libiconv-1.16/lib/: Makefile
libiconv-1.16/libiconv-1.16/libcharset/: config.h  config.status  libtool
libiconv-1.16/libiconv-1.16/po/: Makefile  Makefile.in
libiconv-1.16/libiconv-1.16/src/: Makefile
libiconv-1.16/libiconv-1.16/srclib/: Makefile
libiconv-1.16/libiconv-1.16/tests/: Makefile
(+4 files in other folders)
